docs/examples/valid/extension/enum/basicEnum.wacc
begin
  enum foo is
    A;
    B;
    C;
    D;
  end
  skip
end
