docs/examples/invalid/syntaxErr/extension/enum/InvalidEnumDeclaration.wacc
begin
  foo {
    A;
    B;
    C;
    D;
  };
end
